# rssg

./: .gitignore  Cargo.toml  README.md
my-project/pages/:  portfolio.md
my-project/templates/: template.html
site/: header.html
site/templates/: template.html
src/: build.rs  cli.rs  header.html  init.rs  main.rs  ssg.rs
src/assets/: styles.css
src/static/: styles.css
