[package]
name = "ssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
clap = "3.0.0"  # Replace with the latest version of clap
dialoguer = "0.8.0"  # Replace with the latest version of dialoguer

